compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/TraitClassObjectField.kt
// TraitClassObjectField

interface TraitClassObjectField {
    companion object {
        const konst x: String? = ""
        private konst y: String? = { "" }()
    }
}